<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_background"
        android:orientation="vertical">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@drawable/bg_edit"
            android:gravity="center_vertical">
            <ImageView
                android:layout_marginStart="14.5dp"
                android:layout_width="16dp"
                android:layout_height="18dp"
                android:src="@mipmap/login_people"
                />
            <EditText
                android:id="@+id/login_name_edt"
                android:layout_width="match_parent"
                android:layout_marginStart="14dp"
                android:background="@null"
                android:textSize="14sp"
                android:singleLine="true"
                android:hint="@string/login_name_hint"
                android:layout_height="40dp"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_text_line"/>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@drawable/bg_edit"
            android:gravity="center_vertical">
            <ImageView
                android:layout_marginStart="14.5dp"
                android:layout_width="16dp"
                android:layout_height="18dp"
                android:src="@mipmap/login_lock"
                />
            <EditText
                android:id="@+id/login_pwd_edt"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginStart="14dp"
                android:layout_marginEnd="14dp"

                android:background="@null"
                android:textSize="14sp"
                android:singleLine="true"
                android:inputType="textPassword"
                android:hint="@string/login_pwd_hint"
                android:layout_height="40dp"/>
            <TextView
                android:gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="12sp"
                android:layout_marginEnd="15dp"
                android:visibility="gone"
                android:textColor="@color/color_btn"
                android:text="@string/login_mes_text"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="26dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:visibility="invisible"
            android:layout_height="15dp">
            <ImageView
                android:layout_marginStart="12.5dp"
                android:layout_width="13dp"
                android:layout_height="13dp"
                android:scaleType="centerCrop"
                android:background="@mipmap/login_hint"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:text="@string/login_error_hint"
                android:textSize="12sp"
                android:layout_marginStart="5.5dp"
                android:textColor="@color/color_hint_text"/>

        </LinearLayout>
        <Button
            android:layout_marginTop="25dp"
            android:layout_width="match_parent"
            android:text="@string/login_btn_text"
            android:textColor="@color/color_white"
            android:textSize="18sp"
            android:background="@drawable/login_btn"
            android:layout_marginStart="13dp"
            android:layout_marginEnd="13dp"
            android:layout_height="50dp"/>
        <RelativeLayout
            android:layout_marginTop="20dp"
            android:layout_marginStart="13dp"
            android:layout_marginEnd="13dp"
            android:layout_gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="18dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="@color/color_999999"
                android:layout_alignParentStart="true"
                android:text="@string/login_forget_pwd_text"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="@color/color_999999"
                android:layout_alignParentEnd="true"
                android:text="@string/login_register_text"/>

        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_marginTop="220dp"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:gravity="center_vertical"
                android:layout_height="14dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:background="@color/color_text_line"
                    android:layout_height="1dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:textSize="12sp"
                    android:layout_marginEnd="23dp"
                    android:layout_marginStart="23dp"
                    android:textColor="@color/color_999999"
                    android:text="@string/login_other_text"
                    android:layout_height="14dp"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:background="@color/color_text_line"
                    android:layout_height="1dp"/>
            </LinearLayout>

            <ImageButton
                android:layout_marginTop="24dp"
                android:scaleType="center"
                android:src="@mipmap/login_phone"
                android:layout_width="44dp"
                android:layout_gravity="center"
                android:layout_height="44dp">
            </ImageButton>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:textSize="12sp"
                android:textColor="@color/color_999999"
                android:text="@string/login_phone_text"/>
        </LinearLayout>

    </LinearLayout>

</layout>

